--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,11 @@
   height: 256px;
   margin: 20px;
   border-radius: 10%;
+  cursor: default;
+}
+
+#canvasDiv:hover {
+  cursor: none;
 }
 
 #markerDiv {
