--- a/src/style.css
+++ b/src/style.css
@@ -12,11 +12,11 @@
 }
 
 #canvasDiv {
-  border: solid black 3px;
-  width: 256px;
-  height: 256px;
+  background-image: url("noteboook.png");
+  background-size: 100%;
+  width: 270px;
+  height: 270px;
   margin: 20px;
-  border-radius: 10%;
   cursor: default;
 }
 
@@ -31,5 +31,4 @@
 #canvas {
   width: 100%;
   height: 100%;
-  border-radius: 10%;
 }
