--- a/src/style.css
+++ b/src/style.css
@@ -57,3 +57,14 @@
   width: 50px;
   height: 50px;
 }
+
+#exportDiv {
+  margin: 10px;
+}
+
+#exportButton {
+  background-image: url("save.png");
+  background-size: 100%;
+  width: 60px;
+  height: 60px;
+}
